# SiMath

./: AUTHORS  README
examples/: data.tab  example1.cpp  example2.cpp  example3.cpp
include/: Cache.h  Definitions.h  DiscreteDistribution.h  DiscreteSampling.h  Distribution.h  DivisiveKMeans.h  Histogram.h  InformationGain.h  KMeans.h  Kernel.h  LeaderClustering.h  Makefile  Makefile.am  Makefile.in  Matrix.h  MatrixBinning.h  MatrixOperations.h  NaiveBayes.h  Notifier.h  PrimeNumber.h  SOM.h  SVD.h  SVM.h  SVMSolver.h  SiMath.h  Similarity.h  Utilities.h  Vector.h
src/: Cache.cpp  DiscreteDistribution.cpp  DiscreteSampling.cpp  Distribution.cpp  DivisiveKMeans.cpp  InformationGain.cpp  KMeans.cpp  Kernel.cpp  LeaderClustering.cpp  Makefile  Makefile.am  Makefile.in  Matrix.cpp  MatrixBinning.cpp  MatrixOperations.cpp  NaiveBayes.cpp  PrimeNumber.cpp  SOM.cpp  SVD.cpp  SVM.cpp  SVMSolver.cpp  Similarity.cpp  Utilities.cpp  Vector.cpp
