## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

libsimath_includedir = $(pkgincludedir)

libsimath_include_DATA = \
	Cache.h\
	Definitions.h\
	Distribution.h\
	DiscreteSampling.h\
	DiscreteDistribution.h\
	DivisiveKMeans.h\
	InformationGain.h\
	KMeans.h\
	Kernel.h\
	LeaderClustering.h\
	Matrix.h\
	MatrixBinning.h\
	MatrixOperations.h\
	NaiveBayes.h\
	Notifier.h\
	PrimeNumber.h\
	SiMath.h\
	SOM.h\
	SVD.h\
	SVM.h\
	SVMSolver.h\
	Similarity.h\
	Utilities.h\
	Vector.h

EXTRA_DIST = $(libsimath_include_DATA)
