## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	 -I../include

AM_CXXFLAGS =\
	 -DRELEASE\
	 -Wall\
	 -O3

lib_LTLIBRARIES = libsimath.la

libsimath_la_SOURCES = \
	Cache.cpp\
	Distribution.cpp\
	DiscreteDistribution.cpp\
	DiscreteSampling.cpp\
	DivisiveKMeans.cpp\
	InformationGain.cpp\
	KMeans.cpp\
	Kernel.cpp\
	LeaderClustering.cpp\
	Matrix.cpp\
	MatrixBinning.cpp\
	MatrixOperations.cpp\
	NaiveBayes.cpp\
	PrimeNumber.cpp\
	SOM.cpp\
	SVD.cpp\
	SVM.cpp\
	SVMSolver.cpp\
	Similarity.cpp\
	Utilities.cpp\
	Vector.cpp

libsimath_la_LDFLAGS = 

libsimath_la_LIBADD = 

